# Cpp_threads_exercise

./: CMakeLists.txt  main.cpp  zadanie1.cpp  zadanie2.cpp  zadanie3.cpp  zadanie4.cpp  zadanie5.cpp
